@@ -1,5 +1,11 @@
 2002-03-03  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-window.c:
+	(yelp_window_get_current_uri): added, needed for session
+	  management.
+
+	* src/yelp-html.c (yh_free_stream_data): removed debug printout.
+
 	* src/yelp-view-index.c:
 	- Fixed #67954
 	(yvi_html_url_selected_cb): implemented.
